--- a/css/screen.css
+++ b/css/screen.css
@@ -23,6 +23,14 @@ a { color: #00919e; }
 .topper:before, .header:before, .header__search:before, .header__links:before, .content:before, .alt .header:before, .topper:after, .header:after, .header__search:after, .header__links:after, .content:after, .alt .header:after { content: " "; display: table; }
 .topper:after, .header:after, .header__search:after, .header__links:after, .content:after, .alt .header:after { clear: both; }
 
+@font-face { font-family: 'Web Symbols'; src: url("../fonts/websymbolsligaregular.eot"); src: url("../fonts/websymbolsligaregular.eot?#iefix") format("embedded-opentype"), url("../fonts/websymbolsligaregular.woff") format("woff"), url("../fonts/websymbolsligaregular.ttf") format("truetype"), url("../fonts/websymbolsligaregular.svg#websymbols") format("svg"); font-weight: normal; font-style: normal; }
+
+.icon-2gis, .alt .header__logo a { font: 0/0 a; text-shadow: none; color: transparent; }
+
+.topper, .header, .header__search, .header__links, .content, .alt .header { *zoom: 1; }
+.topper:before, .header:before, .header__search:before, .header__links:before, .content:before, .alt .header:before, .topper:after, .header:after, .header__search:after, .header__links:after, .content:after, .alt .header:after { content: " "; display: table; }
+.topper:after, .header:after, .header__search:after, .header__links:after, .content:after, .alt .header:after { clear: both; }
+
 /* default layout */
 .l { position: relative; z-index: 2000; width: 100%; display: inline-block; margin-bottom: 50px; }
 .l .l-col1 { float: left; width: 686px; }
@@ -38,18 +46,12 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 
 #map { width: 100%; height: 100%; position: fixed; top: 0; bottom: 0; left: 0; right: 0; z-index: 1000; }
 
+.symbol { font-family: 'Web Symbols'; text-rendering: optimizeLegibility; font-weight: normal; font-style: normal; }
+
 input { border: 1px solid #eee; outline: 0; -webkit-transition: border linear, box-shadow linear; -webkit-transition-delay: 0.2s, 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
 input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
 
-.icon { vertical-align: middle; display: inline-block; }
-
-.icon-login { background: url('../img/icons-s29ee0a7bac.png') 0 -446px no-repeat; width: 9px; height: 12px; }
-
-.icon-search { background: url('../img/icons-s29ee0a7bac.png') 0 -406px no-repeat; width: 12px; height: 12px; }
-
-.icon-url { background: url('../img/icons-s29ee0a7bac.png') 0 -260px no-repeat; width: 12px; height: 12px; }
-
-.icon-location { background: url('../img/icons-s29ee0a7bac.png') 0 -384px no-repeat; width: 7px; height: 12px; }
+.icon { vertical-align: middle; display: inline-block; font-weight: normal; font-style: normal; }
 
 .icon-2gis { background: url('../img/icons-s29ee0a7bac.png') 0 -160px no-repeat; width: 30px; height: 15px; }
 
@@ -74,11 +76,9 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .topper__profile .icon-login { margin-top: -4px; margin-right: 2px; }
 .topper__profile li { list-style: none; float: left; margin-left: 10px; position: relative; }
 .topper__profile li:first-child { margin-left: 0; }
-.topper__profile li.is-active a { color: #fff; }
-.topper__profile li.is-active a .icon-login { background: url('../img/icons-s29ee0a7bac.png') 0 -468px no-repeat; width: 9px; height: 12px; }
+.topper__profile li .is-active { color: #fff; }
 .topper__profile a { color: #cfb300; text-decoration: none; }
 .topper__profile a:hover { color: #fff; }
-.topper__profile a:hover .icon-login { background: url('../img/icons-s29ee0a7bac.png') 0 -468px no-repeat; width: 9px; height: 12px; }
 
 .header { position: relative; z-index: 2000; padding: 25px 50px 37px 70px; background: #fff; }
 
@@ -94,19 +94,19 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .header__search div { float: left; }
 .header__search strong { font-weight: bold; display: inline-block; }
 .header__search input { display: inline-block; height: 20px; line-height: 20px; padding: 10px; font-size: 15px; width: 250px; margin-right: 5px; }
-.header__search .btn-inverse { display: inline-block; position: relative; top: 2px; margin-bottom: 0; margin-top: 2px; text-align: center; border: 1px solid transparent; border-radius: 2px; cursor: pointer; font-size: 13px; color: #fff; background: #95a5a6; width: 108px; height: 40px; line-height: 40px; text-transform: uppercase; font-weight: bold; }
-.header__search .btn-inverse .icon-search { position: relative; left: -5px; }
+.header__search .btn-inverse { display: inline-block; position: relative; top: 1px; margin-bottom: 0; margin-top: 2px; text-align: center; border: 1px solid transparent; border-radius: 2px; cursor: pointer; font-size: 13px; color: #fff; background: #95a5a6; width: 108px; height: 40px; line-height: 40px; text-transform: uppercase; font-weight: bold; }
+.header__search .btn-inverse .icon-search { position: relative; left: -5px; top: -2px; }
 
 .header__links { float: right; vertical-align: top; margin-top: 32px; }
 .header__links li { float: left; list-style: none; margin-left: 40px; position: relative; }
 .header__links li:first-child { margin-left: 0; }
-.header__links li a { color: #2c3b53; text-decoration: none; border-bottom: 1px dashed #2c3b53; }
-.header__links li a:hover { border-bottom: 1px dashed transparent; }
-.header__links .icon { position: absolute; top: 2px; left: -15px; }
+.header__links li a { display: block; line-height: 1; color: #2c3b53; text-decoration: none; border-bottom: 1px dotted #2c3b53; }
+.header__links li a:hover { border-bottom: 1px dotted #2c3b53; }
+.header__links .icon { position: absolute; top: 0; left: -15px; }
 
-.header__links-popup { position: absolute; top: 25px; left: -70px; color: #fff; background: #2c3c52; border-radius: 4px; padding: 10px; }
+.header__links-popup { display: none; position: absolute; top: 25px; left: -70px; color: #fff; background: #2c3c52; border-radius: 4px; padding: 10px; }
 .header__links-popup input { margin-top: 5px; outline: 0; border: 0; padding: 3px 8px; }
-.header__links-popup.header__links-popup_mod { top: 120px; left: -120px; padding: 10px 0; }
+.header__links-popup.header__links-popup_mod { top: 25px; left: -33px; padding: 10px 0; }
 .header__links-popup .mark-ya { color: #d92332; }
 .header__links-popup .mark-2gis { color: #9fc419; }
 .header__links-popup li { margin: 0; list-style: none; float: none; color: #fff; text-align: center; }
@@ -125,14 +125,15 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .catalog__title a:hover { text-decoration: none; }
 
 .catalog__list li { list-style: none; padding-bottom: 8px; line-height: 1.2; }
-.catalog__list li a { position: relative; font-size: 15px; color: #2c3a52; text-decoration: none; border-bottom: 1px dotted #2c3a52; }
-.catalog__list li a:hover { color: #2c3a52; text-decoration: none; border-bottom: 1px dotted transparent; }
+.catalog__list li span { position: relative; top: 2px; }
+.catalog__list li a { line-height: 1.1; position: relative; font-size: 15px; color: #2c3a52; text-decoration: none; border-bottom: 1px dotted #2c3a52; }
+.catalog__list li a:hover { color: red; text-decoration: none; border-bottom: 1px dotted red; }
 .catalog__list li a:before { background: url('../img/icons-s29ee0a7bac.png') 0 -185px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 6px; left: -17px; }
 .catalog__list li .is-active { border-bottom: 1px dotted #e7c400; color: #e7c400; text-decoration: none; }
 .catalog__list li .is-active:before { background: url('../img/icons-s29ee0a7bac.png') 0 -312px no-repeat; width: 10px; height: 10px; }
-.catalog__list li .is-active:hover { text-decoration: none; color: #e7c400; border-bottom: 1px dotted transparent; }
+.catalog__list li .is-active:hover { text-decoration: none; color: red; border-bottom: 1px dotted red; }
 .catalog__list li .is-active + ul a { font-size: 14px; color: #287ebb; text-decoration: underline; border-bottom: 1px dotted transparent; }
-.catalog__list li .is-active + ul a:hover { color: #287ebb; text-decoration: none; border-bottom: 1px dotted transparent; }
+.catalog__list li .is-active + ul a:hover { color: red; text-decoration: underline; border-bottom: 1px dotted transparent; }
 .catalog__list li .is-active + ul a:before { content: none; }
 .catalog__list li ul { margin-left: 10px; padding-top: 10px; }
 .catalog__list li ul li { margin-bottom: 10px; }
@@ -156,6 +157,7 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .accordion .h1 { font-weight: bold; font-size: 12px; color: #2c3d51; }
 
 .accordion__title { margin: 15px 0 10px; position: relative; display: inline-block; color: #2c3d51; cursor: pointer; line-height: 1; font-size: 14px; border-bottom: 1px dotted; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
+.accordion__title:hover { color: red; }
 .accordion__title i { position: absolute; left: -14px; top: 5px; background: url('../img/icons-s29ee0a7bac.png') 0 -572px no-repeat; width: 7px; height: 4px; }
 
 .accordion__title.is-active i { background: url('../img/icons-s29ee0a7bac.png') 0 -544px no-repeat; width: 7px; height: 4px; }
@@ -170,8 +172,9 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .search__result a { color: #96a1a1; text-decoration: none; }
 .search__result a:hover { text-decoration: underline; }
 .search__result .title { color: #2c3d51; font-size: 14px; font-weight: normal; line-height: 1.2; margin-bottom: 5px; }
-.search__result .title a { color: #2c3d51; font-size: 14px; font-weight: normal; line-height: 1.2; text-decoration: none; border-bottom: 1px dotted; }
-.search__result .title a:hover { border-bottom: 1px dotted transparent; }
+.search__result .title span { position: relative; top: 2px; }
+.search__result .title a { color: #2c3d51; font-size: 14px; font-weight: normal; line-height: 1; text-decoration: none; border-bottom: 1px dotted; }
+.search__result .title a:hover { color: red; border-bottom: 1px dotted red; }
 
 .search__result-item { color: #000; }
 
@@ -189,11 +192,10 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .radio label { position: relative; padding-left: 15px; }
 .radio i, .radio .radio__btn { position: absolute; left: 0; top: 3px; }
 .radio .select { display: inline-block; }
+.radio i { background: url('../img/icons-s29ee0a7bac.png') 0 -185px no-repeat; width: 10px; height: 10px; }
 
 .radio__btn { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); opacity: 0; z-index: 2; }
 .radio__btn:checked + i { background: url('../img/icons-s29ee0a7bac.png') 0 -312px no-repeat; width: 10px; height: 10px; }
-
-i { background: url('../img/icons-s29ee0a7bac.png') 0 -185px no-repeat; width: 10px; height: 10px; }
 
 .radio__text { margin: 0 6px; height: 22px; width: 52px; color: #7f8c8c; border: 1px solid #eee; text-align: center; font-size: 11px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
@@ -221,7 +223,14 @@ i { background: url('../img/icons-s29ee0a7bac.png') 0 -185px no-repeat; width: 1
 
 .plus { display: inline-block; padding: 5px 8px; font-size: 14px; color: #7f8c8c; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; background-color: #ecf0f1; text-decoration: none; }
 
-.tooltip { z-index: 2000; background: #fff; padding: 20px; width: 260px; font-weight: normal; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; }
+.pin { z-index: 2000; display: inline-block; text-decoration: none; }
+.pin span { position: relative; padding: 7px 12px; background: #277eba; color: #fff; cursor: pointer; }
+.pin span:after { position: absolute; bottom: -5px; left: 50%; margin-left: -5px; content: ""; width: 0px; height: 0px; border-style: solid; border-width: 5px 5px 0 5px; border-color: #277eba transparent transparent transparent; }
+.pin:hover { text-decoration: none; }
+.pin .pin__wrap { position: relative; }
+
+.tooltip { position: absolute; bottom: -8px; left: 50%; margin-left: -150px; display: none; z-index: 2000; background: #fff; padding: 20px; width: 260px; font-weight: normal; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; }
+.tooltip.is-show { display: block; }
 .tooltip a { color: #2876c0; text-decoration: underline; }
 .tooltip a:hover { text-decoration: none; }
 .tooltip:after { position: absolute; bottom: -5px; left: 50%; margin-left: -5px; content: ""; width: 0px; height: 0px; border-style: solid; border-width: 5px 5px 0 5px; border-color: #fff transparent transparent transparent; }
@@ -233,11 +242,6 @@ i { background: url('../img/icons-s29ee0a7bac.png') 0 -185px no-repeat; width: 1
 .tooltip__tags a:hover { text-decoration: underline; }
 
 .tooltip__info { margin-bottom: 10px; }
-
-.pin { z-index: 2000; display: inline-block; color: #fff; text-decoration: none; }
-.pin span { position: relative; padding: 7px 12px; background: #277eba; }
-.pin span:after { position: absolute; bottom: -5px; left: 50%; margin-left: -5px; content: ""; width: 0px; height: 0px; border-style: solid; border-width: 5px 5px 0 5px; border-color: #277eba transparent transparent transparent; }
-.pin:hover { text-decoration: none; }
 
 .alt .out { min-height: 100%; height: auto !important; height: 100%; margin: 0 0 -142px 86px; z-index: 0; }
 .alt .header { padding-top: 39px; margin-left: -87px; background: #fff; }
@@ -288,7 +292,7 @@ i { background: url('../img/icons-s29ee0a7bac.png') 0 -185px no-repeat; width: 1
 .socials .socials__vk a { color: #2c4670; }
 .socials .socials__od a { color: #e57f18; }
 
-.loginpopup { position: absolute; top: 30px; left: -88px; width: 242px; background: #fafafa; z-index: 1001; }
+.loginpopup { display: none; position: absolute; top: 30px; left: -88px; width: 242px; background: #fafafa; z-index: 1001; }
 .loginpopup:before { position: absolute; content: ""; top: -5px; left: 50%; margin-left: -5px; width: 0px; height: 0px; border-style: solid; border-width: 0 5px 5px 5px; border-color: transparent transparent #fafafa transparent; }
 .loginpopup .title { text-align: center; font-size: 10px; font-weight: normal; text-transform: uppercase; color: #7f8c8d; line-height: 1; }
 .loginpopup .form { padding: 10px 0 0 0; width: 100%; }
