--- a/css/screen.css
+++ b/css/screen.css
@@ -201,11 +201,10 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .select li { cursor: pointer; color: #fff; margin-bottom: 3px; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 .select .select__text span { color: #fff; }
 .select .is-active { -webkit-border-radius: 2px 2px 0 0; -moz-border-radius: 2px 2px 0 0; -ms-border-radius: 2px 2px 0 0; -o-border-radius: 2px 2px 0 0; border-radius: 2px 2px 0 0; }
-.select .is-active i { background: url('../img/icons-s29ee0a7bac.png') 0 -558px no-repeat; width: 7px; height: 4px; }
 
 .select__text { height: 21px; line-height: 21px; background: #bdc3c7; cursor: pointer; -webkit-border-radius: 2px; -moz-border-radius: 2px; -ms-border-radius: 2px; -o-border-radius: 2px; border-radius: 2px; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 .select__text span { display: inline-block; padding: 0 5px; color: #fff; vertical-align: middle; text-transform: uppercase; }
-.select__text i { position: relative; top: 0; display: inline-block; margin: 0 5px; vertical-align: middle; background: url('../img/icons-s29ee0a7bac.png') 0 -530px no-repeat; width: 7px; height: 4px; }
+.select__text i { position: relative; top: -6px; display: inline-block; margin: 0 5px; vertical-align: middle; color: #fff; background: none; }
 
 .footer { height: 170px; width: 260px; color: #7f8c8d; font-size: 13px; }
 .footer a { color: #7f8c8d; }
