--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -1,22 +1,15 @@
 @import "lib/base";
 /* default layout */
 .l{
-	position: relative;
-	z-index: 2000;
 	width: 100%;
 	display: inline-block;
-	margin-bottom: 50px;
 	.l-col1{
 		float:left;
-		width: 686px;
+		width: 20%;
 	}
 
 	.l-col2{
-		float:left;
-		width: 280px;
+		float:right;
+		width: 70%;
 	}
-}
-// content
-.content{
-
 }
